Fixed product icons looking funny on mobile.

--- a/source/stylesheets/hashicorp.css
+++ b/source/stylesheets/hashicorp.css
@@ -1808,12 +1808,12 @@ body.page-sub #header .main-links.nav > li > a:focus {
     left: 0px;
   }
   #jumbotron #jumbotron-content .jumbo-logo .hero-prod-logos .prod.p2 {
-    top: 34px;
-    left: 82px;
+    top: 0px;
+    left: 107px;
   }
   #jumbotron #jumbotron-content .jumbo-logo .hero-prod-logos .prod.p3 {
-    top: 98px;
-    left: 137px;
+    top: 0px;
+    left: 195px;
   }
   #jumbotron #jumbotron-content .jumbo-logo .hero-prod-logos .prod.p4 {
     top: 98px;
